# astra

./: .flake8  .gitignore  .pre-commit-config.yaml  =1.0.0  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_PROTOCOL.md  FINAL_STATUS.md  FINAL_VERIFICATION_COMPLETE.md  PROFESSIONALIZATION_REPORT.md  README.md  RENAME_AND_DEPLOY.md  REPOSITORY_SUMMARY.md  SHARE_THIS.md  V2_VALIDATION_REPORT.md  VERIFICATION_ANALYSIS.md  advanced_transients_catalog.csv  astra_advanced_report.txt  classification_summary.md  decimal  enhanced_transients.csv  latest_discovery  pyproject.toml  requirements.txt  resolved_transients.csv  setup.py  verification_summary.md
.github/workflows/: CI.yml  daily_discovery.yml  discovery.yml  release.yml  test.yml
astra_discoveries/: __init__.py  __main__.py
discoveries/2025-11-07_AT2025test/: README.md  data.csv  index.md  observation_plan.md
docs/: API.md  ARCHITECTURE.md  PUBLICATION_GUIDE.md  QUICKSTART.md  SCIENTIFIC_METHOD.md
scripts/: package_discovery.py  package_top_discoveries.py  run_advanced.sh
src/: __init__.py  astra_discovery_engine.py  bright_transient_scraper.py  classification_engine.py  discovery_framework.py  enhanced_discovery.py  enhanced_discovery_v2.py  observation_planner.py  simbad_resolver.py  test_scraper.py  transient_scraper.py
tests/: test_cli.py  test_enhanced_discovery.py  test_init.py  test_release_ready.py  test_transient_scraper.py
tests/data/: rochester_sample.html
